# axdevice_base

./: Cargo.toml
.github/workflows/: ci.yml  release-check.yml
.qoder/repowiki/zh/content/: API参考.md  快速开始.md  测试与验证.md  类型安全工具.md  设备类型别名.md  设备配置管理.md  项目概述.md
.qoder/repowiki/zh/content/核心接口/: Trait对象与多态性机制.md  关联类型 DeviceAddrRange 设计解析.md  核心接口.md  运行时类型转换与 map_device_of_type 函数.md
.qoder/repowiki/zh/content/核心接口/BaseDeviceOps Trait 详解/: BaseDeviceOps Trait 详解.md  address_range 方法详解.md  emu_type 方法详解.md  handle_read 方法详解.md  handle_write 方法详解.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
src/: lib.rs  test.rs
