[package]
authors = ["Hui Xiao <1127751018@qq.com>"] 
categories = ["virtualization", "no-std"] 
description = "Basic traits and structures for emulated devices in ArceOS hypervisor." 
edition = "2024" 
homepage = "https://github.com/arceos-hypervisor/axvisor" 
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0" # MulanPubL2 is not included in SPDX
name = "axdevice_base" 
version = "0.1.0" 

[dependencies]
cfg-if = "1.0"
serde = {version = "1.0.204", default-features = false, features = ["derive", "alloc"]}
# System independent crates provided by ArceOS.
axaddrspace = "0.2.0"
axerrno = "0.2"
axvmconfig = {version = "0.1.0", default-features = false}
memory_addr = "0.4"

[patch.crates-io]
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace", branch = "aar-master" }
